--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Adam Dove Creative</title>
+	<title>Adam Dove | Content Development, Graphic Design, Web Design Services</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
@@ -31,16 +31,19 @@
 
 	<section class="three-column" id="services">
 		<div class="column">
+			<div class="services-icons"></div>
 			<h3>Content Development</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut nunc libero. Fusce pellentesque ante ut sem maximus mattis.</p>
 		</div>
 
 		<div class="column">
+			<div class="services-icons"></div>
 			<h3>Graphic Design</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut nunc libero. Fusce pellentesque ante ut sem maximus mattis.</p>
 		</div>
 
 		<div class="column">
+			<div class="services-icons"></div>
 			<h3>Web Design</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut nunc libero. Fusce pellentesque ante ut sem maximus mattis.</p>
 		</div>
@@ -72,6 +75,7 @@
 	<section class="content" id="contact">
 		<div class="contact">
 			<h2>CONTACT</h2>
+			<!--
 			<form action="#" method="post">
 				<div>
 					<label for="name">Your Name</label>
@@ -89,6 +93,7 @@
 				<div>
 				<input type="submit" value="Submit" />
 				</div>
+			-->
 		</div>
 	</section>
 
