adding portfolio content

--- a/index.html
+++ b/index.html
@@ -26,51 +26,69 @@
 	</section>
 	
 	<section class="photo-banner">
-		<h2>SOME TAGLINE WILL GO HERE.</h2>
+		<h2>HI, I'M ADAM.</h2>
+		<p>I'm a writer, editor, and designer based in Washington, D.C.</p>
 	</section>
 
 	<section class="three-column" id="services">
 		<div class="column">
-			<div class="services-icons"></div>
+			<div class="services-icons"><img src="images/content-icon.png" class="icons"/></div>
 			<h3>Content Development</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut nunc libero. Fusce pellentesque ante ut sem maximus mattis.</p>
+			<p>My content experience includes technical editing, blogging, and copywriting for marketing collateral.</p>
 		</div>
 
 		<div class="column">
-			<div class="services-icons"></div>
-			<h3>Graphic Design</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut nunc libero. Fusce pellentesque ante ut sem maximus mattis.</p>
+			<div class="services-icons"><img src="images/design-icon.png" class="icons"/></div>
+			<h3>Print and Graphic Design</h2>
+			<p>Visual design including logos, marketing collateral, and branding.</p>
 		</div>
 
 		<div class="column">
-			<div class="services-icons"></div>
+			<div class="services-icons icons"><img src="images/web-design-icon.png" class="icons"/></div>
 			<h3>Web Design</h2>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ut nunc libero. Fusce pellentesque ante ut sem maximus mattis.</p>
+			<p>Front-end web development services.</p>
 		</div>
 	</section>
 
 	<section class="content" id="portfolio">
 		<h2>PORTFOLIO</h2>
-		<article class="portfolio"><a href="images/beyond-data-infographic.png" data-lightbox="image-1" data-title="My caption"><img src="images/beyond-data-infographic.png" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/atown-logo.png" data-lightbox="image-1" data-title="My caption"><img src="images/atown-logo.png" class="thumbnail"/></a></article>
+
+		<article class="portfolio"><a href="images/beyond-data-infographic.png" data-lightbox="image-2" data-title="My caption"><img src="images/beyond-data-infographic.png" class="thumbnail"/></a></article>
 		
-		<article class="portfolio"><a href="images/cosmic-infographic.png" data-lightbox="image-2" data-title="My caption"><img src="images/cosmic-infographic.png" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/cosmic-infographic.png" data-lightbox="image-3" data-title="My caption"><img src="images/cosmic-infographic.png" class="thumbnail"/></a></article>
 		
-		<article class="portfolio"><a href="images/cosmic-website.jpg" data-lightbox="image-3" data-title="My caption"><img src="images/cosmic-website.jpg" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/cosmic-website.jpg" data-lightbox="image-4" data-title="My caption"><img src="images/cosmic-website.jpg" class="thumbnail"/></a></article>
+
+		<article class="portfolio"><a href="images/crittonhollow-logo.png" data-lightbox="image-5" data-title="My caption"><img src="images/crittonhollow-logo.png" class="thumbnail"/></a></article>
 		
-		<article class="portfolio"><a href="images/cyber-reboot-logo.png" data-lightbox="image-4" data-title="My caption"><img src="images/cyber-reboot-logo.png" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/cyber-reboot-logo.png" data-lightbox="image-6" data-title="My caption"><img src="images/cyber-reboot-logo.png" class="thumbnail"/></a></article>
 		
-		<article class="portfolio"><a href="images/dendrite-infographic.png" data-lightbox="image-5" data-title="My caption"><img src="images/dendrite-infographic.png" class="thumbnail" /></a></article>
+		<article class="portfolio"><a href="images/dendrite-infographic.png" data-lightbox="image-7" data-title="My caption"><img src="images/dendrite-infographic.png" class="thumbnail" /></a></article>
+
+		<article class="portfolio"><a href="images/etherstack-ad1.jpg" data-lightbox="image-8" data-title="My caption"><img src="images/etherstack-ad1.jpg" class="thumbnail" /></a></article>
+
+		<article class="portfolio"><a href="images/etherstack-ad2.jpg" data-lightbox="image-9" data-title="My caption"><img src="images/etherstack-ad2.jpg" class="thumbnail" /></a></article>
+
 		
-		<article class="portfolio"><a href="images/image-1.png" data-lightbox="image-6" data-title="My caption"><img src="images/image-1.png" /></a></article>
 		
-		<article class="portfolio"><a href="images/image-1.png" data-lightbox="image-7" data-title="My caption"><img src="images/image-1.png" /></a></article>
-		
-		<article class="portfolio"><a href="images/image-1.png" data-lightbox="image-8" data-title="My caption"><img src="images/image-1.png" /></a></article>
-		
-		<article class="portfolio"><a href="images/image-1.png" data-lightbox="image-9" data-title="My caption"><img src="images/image-1.png" /></a></article>
-		
-		<article class="portfolio"><a href="images/image-1.png" data-lightbox="image-10" data-title="My caption"><img src="images/image-1.png" /></a></article>
-	</section>
+		<article class="portfolio"><a href="images/lab41-logo.jpg" data-lightbox="image-10" data-title="My caption"><img src="images/lab41-logo.jpg" class="thumbnail"/></a></article>
+
+		<article class="portfolio"><a href="images/lte25-logo.png" data-lightbox="image-11" data-title="My caption"><img src="images/lte25-logo.png" class="thumbnail"/></a></article>
+
+		<article class="portfolio"><a href="images/lte25-ui.jpg" data-lightbox="image-12" data-title="My caption"><img src="images/lte25-ui.jpg" class="thumbnail"/></a></article>
+
+		<article class="portfolio"><a href="images/novations-logo.png" data-lightbox="image-13" data-title="My caption"><img src="images/novations-logo.png" class="thumbnail"/></a></article>
+
+		<article class="portfolio"><a href="images/redwood-infographic.png" data-lightbox="image-14" data-title="My caption"><img src="images/redwood-infographic.png" class="thumbnail" /></a></article>
+
+		<article class="portfolio"><a href="images/reezig-ad.jpg" data-lightbox="image-15" data-title="My caption"><img src="images/reezig-ad.jpg" class="thumbnail" /></a></article>
+
+		<article class="portfolio"><a href="images/save-the-date.jpg" data-lightbox="image-16" data-title="My caption"><img src="images/save-the-date.jpg" class="thumbnail" /></a></article>
+
+		<article class="portfolio"><a href="images/teamhouse-logo.png" data-lightbox="image-17" data-title="My caption"><img src="images/teamhouse-logo.png" class="thumbnail" /></a></article>
+
+		<article class="portfolio"><a href="images/waxlimb-poster.jpg" data-lightbox="image-18" data-title="My caption"><img src="images/waxlimb-poster.jpg" class="thumbnail" /></a></article>
 
 	<section class="content" id="contact">
 		<div class="contact">
