portfolio CSS and lightbox plugin
CSS tweaks for portfolio thumbnail sizing/alignment, and starting on
lightbox JS plugin for portfolio

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 
 <head>
 	<title>Adam Dove | Content Development, Graphic Design, Web Design Services</title>
+
+	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
+
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Quattrocento:400,700' rel='stylesheet' type='text/css'>
-	<link href="lightbox/css/lightbox.css" rel="stylesheet" />
+	<link href="assets/lightbox/css/lightbox.css" rel="stylesheet" />
 
 </head>
 
@@ -19,13 +23,13 @@
 		<nav class="menu">
 			<ul>
 				<li><a href="#services">SERVICES</a></li>
-				<li><a href="#portfolio">PORTFOLIO</a></li>
+				<li><a href="#portfolio-section">PORTFOLIO</a></li>
 				<li><a href="#contact">CONTACT</a></li>
 			</ul>
 		</nav>
 	</section>
 	
-	<section class="photo-banner">
+	<section class="banner">
 		<h2>HI, I'M ADAM.</h2>
 		<p>I'm a writer, editor, and designer based in Washington, D.C.</p>
 	</section>
@@ -40,25 +44,26 @@
 		<div class="column">
 			<div class="services-icons"><img src="images/design-icon.png" class="icons"/></div>
 			<h3>Print and Graphic Design</h2>
-			<p>Visual design including logos, marketing collateral, and branding.</p>
+			<p>Visual design including logos, marketing collateral, infographics, and branding.</p>
 		</div>
 
 		<div class="column">
 			<div class="services-icons icons"><img src="images/web-design-icon.png" class="icons"/></div>
 			<h3>Web Design</h2>
-			<p>Front-end web development services.</p>
+			<p></p>
 		</div>
 	</section>
 
-	<section class="content" id="portfolio">
+	<section id="portfolio-section">
 		<h2>PORTFOLIO</h2>
-		<article class="portfolio"><a href="images/atown-logo.png" data-lightbox="image-1" data-title="My caption"><img src="images/atown-logo.png" class="thumbnail"/></a></article>
 
-		<article class="portfolio"><a href="images/beyond-data-infographic.png" data-lightbox="image-2" data-title="My caption"><img src="images/beyond-data-infographic.png" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/atown-logo.png" data-lightbox="gallery" data-title="Logo for A-Town Bar and Grill in Arlington, VA."><img src="images/atown-logo-sm.png" class="thumbnail"/></a></article>
+
+		<article class="portfolio"><a href="images/beyond-data-infographic.png" data-lightbox="gallery" data-title="Infographic summarizing the big data analytics work of the Beyond Data project."><img src="images/beyond-data-infographic-sm.png" class="thumbnail"/></a></article>
 		
-		<article class="portfolio"><a href="images/cosmic-infographic.png" data-lightbox="image-3" data-title="My caption"><img src="images/cosmic-infographic.png" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/cosmic-infographic.png" data-lightbox="gallery" data-title="Infographic/two-page spread on small satellites in the commercial space industry."><img src="images/cosmic-infographic-sm.png" class="thumbnail"/></a></article>
 		
-		<article class="portfolio"><a href="images/cosmic-website.jpg" data-lightbox="image-4" data-title="My caption"><img src="images/cosmic-website.jpg" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/cosmic-website.jpg" data-lightbox="gallery" data-title="Website for Cosmic Works, a non-profit challenge lab helping the U.S. government explore technology capabilities from the commercial space industry."><img src="images/cosmic-website-sm.png" class="thumbnail"/></a></article>
 
 		<article class="portfolio"><a href="images/crittonhollow-logo.png" data-lightbox="image-5" data-title="My caption"><img src="images/crittonhollow-logo.png" class="thumbnail"/></a></article>
 		
@@ -66,63 +71,41 @@
 		
 		<article class="portfolio"><a href="images/dendrite-infographic.png" data-lightbox="image-7" data-title="My caption"><img src="images/dendrite-infographic.png" class="thumbnail" /></a></article>
 
-		<article class="portfolio"><a href="images/etherstack-ad1.jpg" data-lightbox="image-8" data-title="My caption"><img src="images/etherstack-ad1.jpg" class="thumbnail" /></a></article>
-
-		<article class="portfolio"><a href="images/etherstack-ad2.jpg" data-lightbox="image-9" data-title="My caption"><img src="images/etherstack-ad2.jpg" class="thumbnail" /></a></article>
-
-		
-		
 		<article class="portfolio"><a href="images/lab41-logo.jpg" data-lightbox="image-10" data-title="My caption"><img src="images/lab41-logo.jpg" class="thumbnail"/></a></article>
-
-		<article class="portfolio"><a href="images/lte25-logo.png" data-lightbox="image-11" data-title="My caption"><img src="images/lte25-logo.png" class="thumbnail"/></a></article>
 
 		<article class="portfolio"><a href="images/lte25-ui.jpg" data-lightbox="image-12" data-title="My caption"><img src="images/lte25-ui.jpg" class="thumbnail"/></a></article>
 
 		<article class="portfolio"><a href="images/novations-logo.png" data-lightbox="image-13" data-title="My caption"><img src="images/novations-logo.png" class="thumbnail"/></a></article>
 
-		<article class="portfolio"><a href="images/redwood-infographic.png" data-lightbox="image-14" data-title="My caption"><img src="images/redwood-infographic.png" class="thumbnail" /></a></article>
+		<article class="portfolio"><img src="images/redwood-infographic.png" class="thumbnail" /></article>
 
 		<article class="portfolio"><a href="images/reezig-ad.jpg" data-lightbox="image-15" data-title="My caption"><img src="images/reezig-ad.jpg" class="thumbnail" /></a></article>
 
-		<article class="portfolio"><a href="images/save-the-date.jpg" data-lightbox="image-16" data-title="My caption"><img src="images/save-the-date.jpg" class="thumbnail" /></a></article>
+		<article class="portfolio"><img src="images/save-the-date.jpg" class="thumbnail" /></article>
 
 		<article class="portfolio"><a href="images/teamhouse-logo.png" data-lightbox="image-17" data-title="My caption"><img src="images/teamhouse-logo.png" class="thumbnail" /></a></article>
 
 		<article class="portfolio"><a href="images/waxlimb-poster.jpg" data-lightbox="image-18" data-title="My caption"><img src="images/waxlimb-poster.jpg" class="thumbnail" /></a></article>
 
-	<section class="content" id="contact">
-		<div class="contact">
-			<h2>CONTACT</h2>
-			<!--
-			<form action="#" method="post">
-				<div>
-					<label for="name">Your Name</label>
-					<input type="text" name="name" id="name" />
-				</div>
-				<div>
-					<label for="email">Email</label>
-					<input type="text" name="email" id="email" />
-				</div>
-				<div>
-					<label for="your-message">Your Message</label>
-					<textarea name="your-message" id="your-message" rows="8" columns="40"/>
-				</textarea>
-				</div>
-				<div>
-				<input type="submit" value="Submit" />
-				</div>
-			-->
-		</div>
 	</section>
 
-	<footer>
-		<p>&copy; 2015 Adam Dove.</p>
-		<i class="fa fa-facebook"></i>
-	</footer>
+	<section class="contact">
+		<h2>CONTACT</h2>
+		<div class="social-icons">
+			<i class="fa fa-linkedin-square fa-3x"></i>
+		</div>
+		<div class="social-icons">
+			<i class="fa fa-twitter-square fa-3x"></i>
+		</div>
+		<div class="social-icons">
+			<i class="fa fa-github-square fa-3x"></i>
+		</div>
 
-	<script src="lightbox/js/jquery-1.11.0.min.js"></script>
-	<script src="lightbox/js/lightbox.min.js"></script>
-	<script type="text/javascript" src="js/javascript.js"></script>
+	</section>
+
+	<script src="assets/lightbox/js/jquery-1.11.0.min.js"></script>
+
+	<script src="assets/lightbox/js/lightbox.min.js"></script>
 		
 </body>
 
