--- a/index.html
+++ b/index.html
@@ -65,27 +65,26 @@
 		
 		<article class="portfolio"><a href="images/cosmic-website.jpg" data-lightbox="gallery" data-title="Website for Cosmic Works, a non-profit challenge lab helping the U.S. government explore technology capabilities from the commercial space industry."><img src="images/cosmic-website-sm.png" class="thumbnail"/></a></article>
 
-		<article class="portfolio"><a href="images/crittonhollow-logo.png" data-lightbox="image-5" data-title="My caption"><img src="images/crittonhollow-logo.png" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/crittonhollow-logo.png" data-lightbox="gallery" data-title="Logo for Critton Hollow Estates, a residential real estate developer in West Virginia."><img src="images/crittonhollow-logo-sm.png" class="thumbnail"/></a></article>
 		
-		<article class="portfolio"><a href="images/cyber-reboot-logo.png" data-lightbox="image-6" data-title="My caption"><img src="images/cyber-reboot-logo.png" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/cyber-reboot-logo.png" data-lightbox="image-6" data-title="Logo for a cybersecurity lab working with the U.S. government."><img src="images/cyber-reboot-logo-sm.png" class="thumbnail"/></a></article>
+
+		<article class="portfolio"><a href="images/lab41-logo.jpg" data-lightbox="gallery" data-title="Logo for Lab41, a collaborative challenge lab focused on big data analytics."><img src="images/lab41-logo-sm.png" class="thumbnail"/></a></article>
 		
-		<article class="portfolio"><a href="images/dendrite-infographic.png" data-lightbox="image-7" data-title="My caption"><img src="images/dendrite-infographic.png" class="thumbnail" /></a></article>
+		<article class="portfolio"><a href="images/dendrite-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Dendrite project on collaborative graph analysis."><img src="images/dendrite-infographic-sm.png" class="thumbnail" /></a></article>
 
-		<article class="portfolio"><a href="images/lab41-logo.jpg" data-lightbox="image-10" data-title="My caption"><img src="images/lab41-logo.jpg" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/redwood-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Redwood project on large data set analysis."><img src="images/redwood-infographic-sm.png" class="thumbnail" /></a></article>
 
-		<article class="portfolio"><a href="images/lte25-ui.jpg" data-lightbox="image-12" data-title="My caption"><img src="images/lte25-ui.jpg" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/lte25-ui.jpg" data-lightbox="gallery" data-title="User interface design for LTE25, an app that connects LTE cellular devices with P25 radio networks."><img src="images/lte25-ui-sm.png" class="thumbnail"/></a></article>
 
-		<article class="portfolio"><a href="images/novations-logo.png" data-lightbox="image-13" data-title="My caption"><img src="images/novations-logo.png" class="thumbnail"/></a></article>
+		<article class="portfolio"><a href="images/novations-logo.png" data-lightbox="gallery" data-title="Logo for Novations Consulting, a software and hardware reseller."><img src="images/novations-logo-sm.png" class="thumbnail"/></a></article>
 
-		<article class="portfolio"><img src="images/redwood-infographic.png" class="thumbnail" /></article>
 
-		<article class="portfolio"><a href="images/reezig-ad.jpg" data-lightbox="image-15" data-title="My caption"><img src="images/reezig-ad.jpg" class="thumbnail" /></a></article>
+		<article class="portfolio"><a href="images/reezig-ad.jpg" data-lightbox="gallery" data-title="Redesign of a Rebook print advertisement."><img src="images/reezig-ad-sm.png" class="thumbnail" /></a></article>
 
-		<article class="portfolio"><img src="images/save-the-date.jpg" class="thumbnail" /></article>
+		<article class="portfolio"><a href="images/teamhouse-logo.png" data-lightbox="gallery" data-title="Logo for house music DJ duo Team House."><img src="images/teamhouse-logo-sm.png" class="thumbnail" /></a></article>
 
-		<article class="portfolio"><a href="images/teamhouse-logo.png" data-lightbox="image-17" data-title="My caption"><img src="images/teamhouse-logo.png" class="thumbnail" /></a></article>
-
-		<article class="portfolio"><a href="images/waxlimb-poster.jpg" data-lightbox="image-18" data-title="My caption"><img src="images/waxlimb-poster.jpg" class="thumbnail" /></a></article>
+		<article class="portfolio"><a href="images/waxlimb-poster.jpg" data-lightbox="gallery" data-title="Poster promoting a show for Richmond-based band Wax Limb."><img src="images/waxlimb-poster-sm.png" class="thumbnail" /></a></article>
 
 	</section>
 
@@ -100,6 +99,18 @@
 		<div class="social-icons">
 			<i class="fa fa-github-square fa-3x"></i>
 		</div>
+
+		<form id="form" class="form" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
+    <div>
+        <div class="intro"></div>
+        <div id="section0" >
+            <div class="field"><label for="Name"></label><input type="text" id="Name" name="Name" placeholder="Name" required autofocus></div>
+            <div class="field"><label for="EmailAddress"></label><input type="text" id="EmailAddress" name="EmailAddress" placeholder="EMAIL ADDRESS" required autofocus></div>
+            <div class="field"><div class="edit-options"><div class="edit"></div><div class="delete"></div></div><label for="Message"></label><textarea id="Message" name="Message" placeholder="MESSAGE" wrap="hard" required autofocus></textarea></div>
+            <div class="field"><label for="SUBMIT"></label><input type="submit" id="SUBMIT" name="SUBMIT"></div>
+        </div>
+    </div>
+</form>
 
 	</section>
 
