portfolio css and background images
parallax effect for bg images and hover state for portfolio items

--- a/index.html
+++ b/index.html
@@ -56,36 +56,103 @@
 	</section>
 
 	<section id="portfolio-section">
+
+		<div class="grid">
 		<h2>PORTFOLIO</h2>
-
-		<article class="portfolio"><a href="images/atown-logo.png" data-lightbox="gallery" data-title="Logo for A-Town Bar and Grill in Arlington, VA."><img src="images/atown-logo-sm.png" class="thumbnail"/></a></article>
-
-		<article class="portfolio"><a href="images/beyond-data-infographic.png" data-lightbox="gallery" data-title="Infographic summarizing the big data analytics work of the Beyond Data project."><img src="images/beyond-data-infographic-sm.png" class="thumbnail"/></a></article>
 		
-		<article class="portfolio"><a href="images/cosmic-infographic.png" data-lightbox="gallery" data-title="Infographic/two-page spread on small satellites in the commercial space industry."><img src="images/cosmic-infographic-sm.png" class="thumbnail"/></a></article>
+		<div class="container">
+
+		<div class="portfolio grid-item logo" data-category="logo">
+			<a href="images/atown-logo.png" data-lightbox="gallery" data-title="Logo for A-Town Bar and Grill in Arlington, VA.">
+				<img src="images/atown-logo-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
+
+		<div class="portfolio grid-item infographic print">
+			<a href="images/beyond-data-infographic.png" data-lightbox="gallery" data-title="Infographic summarizing the big data analytics work of the Beyond Data project.">
+				<img src="images/beyond-data-infographic-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
 		
-		<article class="portfolio"><a href="images/cosmic-website.jpg" data-lightbox="gallery" data-title="Website for Cosmic Works, a non-profit challenge lab helping the U.S. government explore technology capabilities from the commercial space industry."><img src="images/cosmic-website-sm.png" class="thumbnail"/></a></article>
-
-		<article class="portfolio"><a href="images/crittonhollow-logo.png" data-lightbox="gallery" data-title="Logo for Critton Hollow Estates, a residential real estate developer in West Virginia."><img src="images/crittonhollow-logo-sm.png" class="thumbnail"/></a></article>
+		<div class="portfolio grid-item infographic print">
+			<a href="images/cosmic-infographic.png" data-lightbox="gallery" data-title="Infographic/two-page spread on small satellites in the commercial space industry.">
+				<img src="images/cosmic-infographic-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+				</a>
+		</div>
 		
-		<article class="portfolio"><a href="images/cyber-reboot-logo.png" data-lightbox="image-6" data-title="Logo for a cybersecurity lab working with the U.S. government."><img src="images/cyber-reboot-logo-sm.png" class="thumbnail"/></a></article>
+		<div class="portfolio grid-item digital">
+			<a href="images/cosmic-website.jpg" data-lightbox="gallery" data-title="Website for Cosmic Works, a non-profit challenge lab helping the U.S. government explore technology capabilities from the commercial space industry.">
+				<img src="images/cosmic-website-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+				</a>
+		</div>
 
-		<article class="portfolio"><a href="images/lab41-logo.jpg" data-lightbox="gallery" data-title="Logo for Lab41, a collaborative challenge lab focused on big data analytics."><img src="images/lab41-logo-sm.png" class="thumbnail"/></a></article>
+		<div class="portfolio grid-item">
+			<a href="images/crittonhollow-logo.png" data-lightbox="gallery" data-title="Logo for Critton Hollow Estates, a residential real estate developer in West Virginia.">
+				<img src="images/crittonhollow-logo-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+				</a>
+		</div>
 		
-		<article class="portfolio"><a href="images/dendrite-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Dendrite project on collaborative graph analysis."><img src="images/dendrite-infographic-sm.png" class="thumbnail" /></a></article>
+		<div class="portfolio grid-item">
+			<a href="images/cyber-reboot-logo.png" data-lightbox="image-6" data-title="Logo for a cybersecurity lab working with the U.S. government.">
+				<img src="images/cyber-reboot-logo-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+				</a>
+		</div>
 
-		<article class="portfolio"><a href="images/redwood-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Redwood project on large data set analysis."><img src="images/redwood-infographic-sm.png" class="thumbnail" /></a></article>
+		<div class="portfolio grid-item"><a href="images/lab41-logo.jpg" data-lightbox="gallery" data-title="Logo for Lab41, a collaborative challenge lab focused on big data analytics.">
+			<img src="images/lab41-logo-sm.png" class="thumbnail"/>
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
+		
+		<div class="portfolio grid-item"><a href="images/dendrite-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Dendrite project on collaborative graph analysis.">
+			<img src="images/dendrite-infographic-sm.png" class="thumbnail" />
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
 
-		<article class="portfolio"><a href="images/lte25-ui.jpg" data-lightbox="gallery" data-title="User interface design for LTE25, an app that connects LTE cellular devices with P25 radio networks."><img src="images/lte25-ui-sm.png" class="thumbnail"/></a></article>
+		<div class="portfolio grid-item"><a href="images/redwood-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Redwood project on large data set analysis.">
+			<img src="images/redwood-infographic-sm.png" class="thumbnail" />
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
 
-		<article class="portfolio"><a href="images/novations-logo.png" data-lightbox="gallery" data-title="Logo for Novations Consulting, a software and hardware reseller."><img src="images/novations-logo-sm.png" class="thumbnail"/></a></article>
+		<div class="portfolio grid-item"><a href="images/lte25-ui.jpg" data-lightbox="gallery" data-title="User interface design for LTE25, an app that connects LTE cellular devices with P25 radio networks.">	<img src="images/lte25-ui-sm.png" class="thumbnail"/>
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
+
+		<div class="portfolio grid-item"><a href="images/novations-logo.png" data-lightbox="gallery" data-title="Logo for Novations Consulting, a software and hardware reseller.">
+			<img src="images/novations-logo-sm.png" class="thumbnail"/>
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
 
 
-		<article class="portfolio"><a href="images/reezig-ad.jpg" data-lightbox="gallery" data-title="Redesign of a Rebook print advertisement."><img src="images/reezig-ad-sm.png" class="thumbnail" /></a></article>
+		<div class="portfolio grid-item"><a href="images/reezig-ad.jpg" data-lightbox="gallery" data-title="Redesign of a Rebook print advertisement.">
+			<img src="images/reezig-ad-sm.png" class="thumbnail" />
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
 
-		<article class="portfolio"><a href="images/teamhouse-logo.png" data-lightbox="gallery" data-title="Logo for house music DJ duo Team House."><img src="images/teamhouse-logo-sm.png" class="thumbnail" /></a></article>
+		<div class="portfolio grid-item"><a href="images/teamhouse-logo.png" data-lightbox="gallery" data-title="Logo for house music DJ duo Team House.">
+			<img src="images/teamhouse-logo-sm.png" class="thumbnail" />
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
 
-		<article class="portfolio"><a href="images/waxlimb-poster.jpg" data-lightbox="gallery" data-title="Poster promoting a show for Richmond-based band Wax Limb."><img src="images/waxlimb-poster-sm.png" class="thumbnail" /></a></article>
+		<div class="portfolio grid-item"><a href="images/waxlimb-poster.jpg" data-lightbox="gallery" data-title="Poster promoting a show for Richmond-based band Wax Limb.">
+			<img src="images/waxlimb-poster-sm.png" class="thumbnail" />
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
+		</div>
+
+		</div>
 
 	</section>
 
@@ -129,8 +196,6 @@
 	<script src="assets/lightbox/js/lightbox.min.js"></script>
 
 	<script type="text/javascript" src="js/javascript.js"></script>
-
-	<script src="assets/isotope/isotope.pkgd.min.js"></script>
 
 		
 </body>
