--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Adam Dove | Content Development, Graphic Design, Web Design Services</title>
 
 	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
@@ -21,7 +24,8 @@
 	<section class="header">
 		<div class="logo"><a href="#start"><img src="images/ad-logo.png" class="logo"></a></div>
 		<nav class="menu">
-			<ul>
+			<a href="#" class="mobile-only btn hamburger">&#9776;</a>
+			<ul class="desktop-only navigation">
 
 				<li><a href="#services">SERVICES</a></li>
 				<li><a href="#portfolio-section">PORTFOLIO</a></li>
@@ -39,19 +43,19 @@
 		<div class="column">
 			<div class="services-icons"><img src="images/content-icon.png" class="icons"/></div>
 			<h3>Content Development</h2>
-			<p>My content experience includes technical editing, blogging, and copywriting for marketing collateral.</p>
+			<p>Writing and editing for technical communications, marketing collateral, and anything else made of words.</p>
 		</div>
 
 		<div class="column">
 			<div class="services-icons"><img src="images/design-icon.png" class="icons"/></div>
 			<h3>Print and Graphic Design</h2>
-			<p>Visual design including logos, marketing collateral, infographics, and branding.</p>
+			<p>Visual design including logos, branding packages, print collateral, and infographics.</p>
 		</div>
 
 		<div class="column">
 			<div class="services-icons icons"><img src="images/web-design-icon.png" class="icons"/></div>
 			<h3>Web Design</h2>
-			<p></p>
+			<p>Taking your visual presence online, because it's 2015. Website design and front-end development services.</p>
 		</div>
 	</section>
 
@@ -96,12 +100,25 @@
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 				</a>
 		</div>
-		
+
 		<div class="portfolio grid-item">
-			<a href="images/cyber-reboot-logo.png" data-lightbox="image-6" data-title="Logo for a cybersecurity lab working with the U.S. government.">
+			<a href="images/cyber-reboot-logo.png" data-lightbox="gallery" data-title="Logo for a cybersecurity lab working with the U.S. government.">
 				<img src="images/cyber-reboot-logo-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 				</a>
+		</div>
+
+		<div class="portfolio grid-item">
+			<a href="images/etherstack-ad1.png" data-lightbox="gallery" data-title="Print advertisement for Etherstack, a wireless communications technology company.">
+				<img src="images/etherstack-ad1-sm.png" class="thumbnail"/>
+					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+				</a>
+		</div>
+
+		<div class="portfolio grid-item"><a href="images/etherstack-ad2.png" data-lightbox="gallery" data-title="Print advertisement for Etherstack, a wireless communications technology company.">
+			<img src="images/etherstack-ad2-sm.png" class="thumbnail"/>
+				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
+			</a>
 		</div>
 
 		<div class="portfolio grid-item"><a href="images/lab41-logo.jpg" data-lightbox="gallery" data-title="Logo for Lab41, a collaborative challenge lab focused on big data analytics.">
@@ -140,7 +157,7 @@
 			</a>
 		</div>
 
-		<div class="portfolio grid-item"><a href="images/teamhouse-logo.png" data-lightbox="gallery" data-title="Logo for house music DJ duo Team House.">
+		<div class="portfolio grid-item"><a href="images/teamhouse-logo.png" data-lightbox="gallery" data-title="Logo for house music DJs Team House.">
 			<img src="images/teamhouse-logo-sm.png" class="thumbnail" />
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
