--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 	<title>Adam Dove | Content Development, Graphic Design, Web Design Services</title>
 
 	<link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
-
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Quattrocento:400,700' rel='stylesheet' type='text/css'>
 	<link href="assets/lightbox/css/lightbox.css" rel="stylesheet" />
@@ -36,24 +34,24 @@
 	
 	<section class="banner" id="start">
 		<h2>HI, I'M ADAM.</h2>
-		<p>I'm a writer, editor, and designer based in Washington, D.C.</p>
+		<p>I'm an editor and designer based in Washington, D.C.</p>
 	</section>
 
 	<section class="three-column" id="services">
 		<div class="column">
-			<div class="services-icons"><img src="images/content-icon.png" class="icons"/></div>
+			<div class="services-circles"><img src="images/content-icon.png" class="icons"/></div>
 			<h3>Content Development</h2>
 			<p>Writing and editing for technical communications, marketing collateral, and anything else made of words.</p>
 		</div>
 
 		<div class="column">
-			<div class="services-icons"><img src="images/design-icon.png" class="icons"/></div>
+			<div class="services-circles"><img src="images/design-icon.png" class="icons"/></div>
 			<h3>Print and Graphic Design</h2>
 			<p>Visual design including logos, branding packages, print collateral, and infographics.</p>
 		</div>
 
 		<div class="column">
-			<div class="services-icons icons"><img src="images/web-design-icon.png" class="icons"/></div>
+			<div class="services-circles"><img src="images/web-design-icon.png" class="icons"/></div>
 			<h3>Web Design</h2>
 			<p>Taking your visual presence online, because it's 2015. Website design and front-end development services.</p>
 		</div>
@@ -66,104 +64,104 @@
 		
 		<div class="container">
 
-		<div class="portfolio grid-item logo" data-category="logo">
+		<div class="portfolio">
 			<a href="images/atown-logo.png" data-lightbox="gallery" data-title="Logo for A-Town Bar and Grill in Arlington, VA.">
 				<img src="images/atown-logo-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
 
-		<div class="portfolio grid-item infographic print">
+		<div class="portfolio">
 			<a href="images/beyond-data-infographic.png" data-lightbox="gallery" data-title="Infographic summarizing the big data analytics work of the Beyond Data project.">
 				<img src="images/beyond-data-infographic-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
 		
-		<div class="portfolio grid-item infographic print">
+		<div class="portfolio">
 			<a href="images/cosmic-infographic.png" data-lightbox="gallery" data-title="Infographic/two-page spread on small satellites in the commercial space industry.">
 				<img src="images/cosmic-infographic-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 				</a>
 		</div>
 		
-		<div class="portfolio grid-item digital">
+		<div class="portfolio">
 			<a href="images/cosmic-website.jpg" data-lightbox="gallery" data-title="Website for Cosmic Works, a non-profit challenge lab helping the U.S. government explore technology capabilities from the commercial space industry.">
 				<img src="images/cosmic-website-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 				</a>
 		</div>
 
-		<div class="portfolio grid-item">
+		<div class="portfolio">
 			<a href="images/crittonhollow-logo.png" data-lightbox="gallery" data-title="Logo for Critton Hollow Estates, a residential real estate developer in West Virginia.">
 				<img src="images/crittonhollow-logo-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 				</a>
 		</div>
 
-		<div class="portfolio grid-item">
+		<div class="portfolio">
 			<a href="images/cyber-reboot-logo.png" data-lightbox="gallery" data-title="Logo for a cybersecurity lab working with the U.S. government.">
 				<img src="images/cyber-reboot-logo-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 				</a>
 		</div>
 
-		<div class="portfolio grid-item">
+		<div class="portfolio">
 			<a href="images/etherstack-ad1.png" data-lightbox="gallery" data-title="Print advertisement for Etherstack, a wireless communications technology company.">
 				<img src="images/etherstack-ad1-sm.png" class="thumbnail"/>
 					<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 				</a>
 		</div>
 
-		<div class="portfolio grid-item"><a href="images/etherstack-ad2.png" data-lightbox="gallery" data-title="Print advertisement for Etherstack, a wireless communications technology company.">
+		<div class="portfolio"><a href="images/etherstack-ad2.png" data-lightbox="gallery" data-title="Print advertisement for Etherstack, a wireless communications technology company.">
 			<img src="images/etherstack-ad2-sm.png" class="thumbnail"/>
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
 
-		<div class="portfolio grid-item"><a href="images/lab41-logo.jpg" data-lightbox="gallery" data-title="Logo for Lab41, a collaborative challenge lab focused on big data analytics.">
+		<div class="portfolio"><a href="images/lab41-logo.jpg" data-lightbox="gallery" data-title="Logo for Lab41, a collaborative challenge lab focused on big data analytics.">
 			<img src="images/lab41-logo-sm.png" class="thumbnail"/>
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
 		
-		<div class="portfolio grid-item"><a href="images/dendrite-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Dendrite project on collaborative graph analysis.">
+		<div class="portfolio"><a href="images/dendrite-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Dendrite project on collaborative graph analysis.">
 			<img src="images/dendrite-infographic-sm.png" class="thumbnail" />
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
 
-		<div class="portfolio grid-item"><a href="images/redwood-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Redwood project on large data set analysis.">
+		<div class="portfolio"><a href="images/redwood-infographic.png" data-lightbox="gallery" data-title="Infographic for Lab41's Redwood project on large data set analysis.">
 			<img src="images/redwood-infographic-sm.png" class="thumbnail" />
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
 
-		<div class="portfolio grid-item"><a href="images/lte25-ui.jpg" data-lightbox="gallery" data-title="User interface design for LTE25, an app that connects LTE cellular devices with P25 radio networks.">	<img src="images/lte25-ui-sm.png" class="thumbnail"/>
+		<div class="portfolio"><a href="images/lte25-ui.jpg" data-lightbox="gallery" data-title="User interface design for LTE25, an app that connects LTE cellular devices with P25 radio networks.">	<img src="images/lte25-ui-sm.png" class="thumbnail"/>
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
 
-		<div class="portfolio grid-item"><a href="images/novations-logo.png" data-lightbox="gallery" data-title="Logo for Novations Consulting, a software and hardware reseller.">
+		<div class="portfolio"><a href="images/novations-logo.png" data-lightbox="gallery" data-title="Logo for Novations Consulting, a software and hardware reseller.">
 			<img src="images/novations-logo-sm.png" class="thumbnail"/>
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
 
 
-		<div class="portfolio grid-item"><a href="images/reezig-ad.jpg" data-lightbox="gallery" data-title="Redesign of a Rebook print advertisement.">
+		<div class="portfolio"><a href="images/reezig-ad.jpg" data-lightbox="gallery" data-title="Redesign of a Rebook print advertisement.">
 			<img src="images/reezig-ad-sm.png" class="thumbnail" />
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
 
-		<div class="portfolio grid-item"><a href="images/teamhouse-logo.png" data-lightbox="gallery" data-title="Logo for house music DJs Team House.">
+		<div class="portfolio"><a href="images/teamhouse-logo.png" data-lightbox="gallery" data-title="Logo for house music DJs Team House.">
 			<img src="images/teamhouse-logo-sm.png" class="thumbnail" />
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
 		</div>
 
-		<div class="portfolio grid-item"><a href="images/waxlimb-poster.jpg" data-lightbox="gallery" data-title="Poster promoting a show for Richmond-based band Wax Limb.">
+		<div class="portfolio"><a href="images/waxlimb-poster.jpg" data-lightbox="gallery" data-title="Poster promoting a show for Richmond-based band Wax Limb.">
 			<img src="images/waxlimb-poster-sm.png" class="thumbnail" />
 				<div class="after"><i class="fa fa-search-plus fa-4x"></i></div>
 			</a>
