contact section edits
replace form with email icon, also fixed loading issue by removing
autofocus

--- a/index.html
+++ b/index.html
@@ -183,26 +183,10 @@
 			<a href="https://github.com/adamdove11" target="_blank">
 			<i class="fa fa-github-square fa-3x"></i></a>
 		</div>
-
-		<form id="form" class="form" method="post" action="mailto:adam.d.dove@gmail.com"enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
-		    <div>
-		        <div class="intro"></div>
-		        <div>
-		            <div class="field">
-		            	<label for="Name"></label><input type="text" id="Name" name="Name" placeholder="NAME" required autofocus></div>
-		            <div class="field">
-		            	<label for="EmailAddress"></label>
-		            	<input type="text" id="EmailAddress" name="EmailAddress" placeholder="EMAIL ADDRESS" required autofocus>
-		            </div>
-		            <div class="field">
-		            	<label for="Message"></label><textarea id="Message" name="Message" placeholder="MESSAGE" wrap="hard" required autofocus></textarea>
-		            </div>
-		            <div class="field">
-		            	<label for="SUBMIT"></label><input type="submit" id="SUBMIT" name="SUBMIT">
-		            </div>
-		        </div>
-		    </div>
-</form>
+		<div class="social-icons">
+			<a href="mailto:adam.d.dove@gmail.com" target="_blank">
+			<i class="fa fa-envelope-o fa-3x"></i></a>
+		</div>
 
 	</section>
 
