--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<ul class="desktop-only navigation">
 
 				<li><a href="#services">SERVICES</a></li>
-				<li><a href="#portfolio-section">PORTFOLIO</a></li>
+				<li><a href="#portfolio-section">DESIGN PORTFOLIO</a></li>
 				<li><a href="#contact-section">CONTACT</a></li>
 			</ul>
 		</nav>
@@ -34,14 +34,14 @@
 	
 	<section class="banner" id="start">
 		<h2>HI, I'M ADAM.</h2>
-		<p>I'm an editor and designer based in Washington, D.C.</p>
+		<p>Jack of all creative trades based in Washington, D.C.</p>
 	</section>
 
 	<section class="three-column" id="services">
 		<div class="column">
 			<div class="services-circles"><img src="images/content-icon.png" class="icons"/></div>
 			<h3>Content Development</h2>
-			<p>Writing and editing for technical communications, marketing collateral, and anything else made of words.</p>
+			<p>Writing and editing for technical communications, marketing collateral, and and almost any other copy that needs polishing.</p>
 		</div>
 
 		<div class="column">
@@ -52,15 +52,15 @@
 
 		<div class="column">
 			<div class="services-circles"><img src="images/web-design-icon.png" class="icons"/></div>
-			<h3>Web Design</h2>
-			<p>Taking your visual presence online, because it's 2015. Website design and front-end development services.</p>
+			<h3>Web Design and Development</h2>
+			<p>Taking your visual presence online with responsive website design and front-end development.</p>
 		</div>
 	</section>
 
 	<section id="portfolio-section">
 
 		<div class="grid">
-		<h2>PORTFOLIO</h2>
+		<h2>DESIGN PORTFOLIO</h2>
 		
 		<div class="container">
 
